src/lib/snapshots/cviz__snapshot_tests__tests__typed_chain_mermaid_handler_chain_with_types.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 299
expression: "mermaid_snap(&typed_chain_graph(), DetailLevel::HandlerChain, true)"
---
%%{init: {'flowchart': {'wrappingWidth': 2400}}}%%
graph LR
    subgraph composition["Service Chains"]
        middleware["middleware"]
        srv["srv"]
    end

    export_wasi_http_handler_0_3_0(["Export: handler✦"]) --> middleware
    middleware -->|"handler✦"| srv

    key["<div style='text-align:left'>Signatures:<br/>✦ 'handle': (u32) -&gt; bool</div>"]
    style key fill:none,stroke:none,color:#888
